Tweak last section margin

--- a/src/sidebars/block-manager/styles/editor.scss
+++ b/src/sidebars/block-manager/styles/editor.scss
@@ -41,6 +41,10 @@
 			margin-top: 0;
 		}
 
+		&:last-of-type {
+			margin-bottom: .45em;
+		}
+
 		&-header {
 			align-items: center;
 			display: flex;
