Tweak branding assets

--- a/src/blocks/layout/styles/editor.scss
+++ b/src/blocks/layout/styles/editor.scss
@@ -2,8 +2,9 @@
 
 	.components-placeholder__label {
 		svg {
+			margin-right: 0.5em;
 			position: relative;
-			top: -0.065em;
+			top: -0.078em;
 		}
 	}
 }
