coblocks__svg to components-coblocks-svg

--- a/src/styles/editor/_icons.scss
+++ b/src/styles/editor/_icons.scss
@@ -13,7 +13,7 @@
 }
 
 // Style our custom colored icons like the default icons.
-.coblocks__svg {
+.components-coblocks-svg {
 	.components-panel &,
 	.components-toolbar &,
 	.editor-block-navigation__item & {
