--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -20,6 +20,7 @@
 		margin-right: 0.7em;
 
 		svg {
+			fill: #23282d; // Same color as modal headings.
 			position: relative;
 			top: 0.16em;
 		}
