Add new branding colors from the 2.0 colors/brand overhaul

--- a/src/common.scss
+++ b/src/common.scss
@@ -4,7 +4,7 @@
 $default-font: -apple-system, blinkmacsystemfont, "Segoe UI", roboto, oxygen-sans, ubuntu, cantarell, "Helvetica Neue", sans-serif;
 
 // CoBlocks branding color.
-$coblocks: #555eff;
+$coblocks: #1e35b9;
 
 // Colors.
 $black: rgb(41, 41, 41);
