--- a/src/components/typography-controls/styles/editor.scss
+++ b/src/components/typography-controls/styles/editor.scss
@@ -1,22 +1,21 @@
 .components-coblocks-typography-dropdown {
-	padding: 0;
+	padding: 0 !important;
 
 	&__inner {
 		padding: 16px;
 
-		select {
+		.components-select-control__input {
 			appearance: none;
 			background: 0 0;
-			border-color: #ccc;
-			border-radius: 4px;
 			border: 1px solid #8d96a0;
+			border-radius: 4px;
 			box-shadow: 0 0 0 transparent;
 			color: #555;
 			cursor: pointer;
 			font-size: 13px !important;
 			height: 30px;
 			line-height: 28px;
-			padding: 0 12px 2px;
+			padding: 0 9px 2px;
 			position: relative;
 			transition: box-shadow 0.1s linear;
 			vertical-align: top;
@@ -40,7 +39,7 @@
 			&:focus:enabled {
 				background: #fafafa;
 				border-color: #999;
-				box-shadow: inset 0 -1px 0 #999,0 0 0 2px #bfe7f3;
+				box-shadow: inset 0 -1px 0 #999, 0 0 0 2px #bfe7f3;
 				color: #23282d;
 				text-decoration: none;
 			}
@@ -91,7 +90,6 @@
 	}
 
 	.components-base-control--with-flex {
-
 		.components-base-control__field {
 			align-items: center;
 			display: flex;
