--- a/src/components/visual-dropdown/styles/editor.scss
+++ b/src/components/visual-dropdown/styles/editor.scss
@@ -2,6 +2,10 @@
 .components-coblocks-visual-dropdown {
 	text-align: center;
 
+	&.components-dropdown-menu {
+		padding: 0;
+	}
+
 	&.components-placeholder {
 		.components-placeholder__label svg {
 			position: relative;
@@ -35,16 +39,16 @@
 		&:focus {
 			box-shadow: 0 0 0 2px #00a0d2;
 			color: #191e23;
-			outline-offset: -2px;
 			outline: 2px solid transparent;
+			outline-offset: -2px;
 		}
 	}
 
-	&__button.components-button.is-default {
+	&__button.components-button.is-button.is-default {
 		align-items: center;
 		background: #fff;
-		border-radius: 4px !important;
 		border: 1px solid rgba(25, 30, 35, 0.2);
+		border-radius: 4px !important;
 		box-shadow: none;
 		display: flex;
 		flex-direction: column;
@@ -75,7 +79,7 @@
 		}
 	}
 
-	&__back {
+	&__back.components-icon-button {
 		background: #fff;
 		border: 1px solid rgba(25, 30, 35, 0.2);
 		margin-right: 4px;
