--- a/src/components/dimensions-control/styles/editor.scss
+++ b/src/components/dimensions-control/styles/editor.scss
@@ -1,4 +1,4 @@
-.components-panel__body{
+.components-panel__body {
 	.components-coblocks-dimensions-control {
 		position: relative;
 
@@ -33,9 +33,13 @@
 			}
 
 			&:focus:enabled {
-				background: #fff !important;
+				background: $dark-gray-500 !important;
 				border-color: $dark-gray-500;
-				box-shadow: 0 0 0;
+				box-shadow: inset 0 0 0 1px $white;
+
+				svg {
+					fill: #fff;
+				}
 			}
 
 			svg {
@@ -228,8 +232,8 @@
 		&_sync.components-button.is-small {
 			background: #fff;
 			border: 1px solid #8d96a0;
-			border-bottom-right-radius: 4px;
 			border-radius: 0;
+			border-bottom-right-radius: 4px;
 			border-top-right-radius: 4px;
 			box-shadow: none;
 			color: $dark-gray-500;
