--- a/src/components/orientation/styles/editor.scss
+++ b/src/components/orientation/styles/editor.scss
@@ -16,7 +16,7 @@
 		}
 	}
 
-	.components-button {
+	.components-button-group .components-button {
 		appearance: none;
 		background: $white;
 		border: 1px solid #8d96a0;
@@ -46,6 +46,7 @@
 		}
 
 		&:active:enabled {
+			background: $white;
 			box-shadow: none;
 		}
 
