More display enhancement for editor view

--- a/src/blocks/buttons/styles/editor.scss
+++ b/src/blocks/buttons/styles/editor.scss
@@ -40,11 +40,146 @@
 			//button block
 			.wp-block[data-type="core/button"] {
 				width: auto !important;
+				padding-left: 28px;
+				padding-right: 28px;
+				margin-left: 0px;
+				margin-right: 0px;
+
+				> .editor-block-list__block-edit{
+					margin-top: 0px !important;
+					margin-bottom: 0px !important; 
+				}
+			}
+
+			//Add Gutter
+			&.has-no-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
+				@include break-small() {
+					&:nth-child(odd) {
+						margin-right: 0;
+					}
+
+					&:nth-child(even) {
+						margin-left: 0;
+					}
+
+					&:not(:first-child) {
+						margin-left: 0;
+					}
+
+					&:not(:last-child) {
+						margin-right: 0;
+					}
+				}
+			}
+
+			&.has-small-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
+				@media (max-width: #{ ($break-small) }) {
+					&:not(:last-child) {
+						margin-bottom: $gutter--small * 2;
+					}
+				}
+
+				@include break-small() {
+					&:nth-child(odd) {
+						margin-right: $gutter--small - 16px;
+					}
+
+					&:nth-child(even) {
+						margin-left: $gutter--small - 16px;
+					}
+
+					&:not(:first-child) {
+						margin-left: $gutter--small - 16px;
+					}
+
+					&:not(:last-child) {
+						margin-right: $gutter--small - 16px;
+					}
+				}
+			}
+
+			&.has-medium-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
+				@media (max-width: #{ ($break-small) }) {
+					&:not(:last-child) {
+						margin-bottom: $gutter--medium * 2;
+					}
+				}
+
+				@include break-small() {
+					&:nth-child(odd) {
+						margin-right: $gutter--medium - 16px;
+					}
+
+					&:nth-child(even) {
+						margin-left: $gutter--medium - 16px;
+					}
+
+					&:not(:first-child) {
+						margin-left: $gutter--medium - 16px;
+					}
+
+					&:not(:last-child) {
+						margin-right: $gutter--medium - 16px;
+					}
+				}
+			}
+
+			&.has-large-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
+				@media (max-width: #{ ($break-small) }) {
+					&:not(:last-child) {
+						margin-bottom: $gutter--large * 2;
+					}
+				}
+
+				@include break-small() {
+					&:nth-child(odd) {
+						margin-right: $gutter--large - 16px;
+					}
+
+					&:nth-child(even) {
+						margin-left: $gutter--large - 16px;
+					}
+
+					&:not(:first-child) {
+						margin-left: $gutter--large - 16px;
+					}
+
+					&:not(:last-child) {
+						margin-right: $gutter--large - 16px;
+					}
+				}
+			}
+
+			&.has-huge-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
+				@media (max-width: #{ ($break-small) }) {
+					&:not(:last-child) {
+						margin-bottom: $gutter--huge * 2;
+					}
+				}
+
+				@include break-small() {
+					&:nth-child(odd) {
+						margin-right: $gutter--huge - 16px;
+					}
+
+					&:nth-child(even) {
+						margin-left: $gutter--huge - 16px;
+					}
+
+					&:not(:first-child) {
+						margin-left: $gutter--huge - 16px;
+					}
+
+					&:not(:last-child) {
+						margin-right: $gutter--huge - 16px;
+					}
+				}
 			}
 
 		}
 		.block-list-appender{
 			display: none;
 		}
+
 	}
 }
