--- a/src/blocks/buttons/styles/style.scss
+++ b/src/blocks/buttons/styles/style.scss
@@ -6,12 +6,70 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		text-align: center;
 
 		&.flex-align-left{
 			justify-content: flex-start;
+			text-align: left;
 		}
 		&.flex-align-right{
 			justify-content: flex-end;
+			text-align: right;
+		}
+
+		//Display button as stacked
+		&.is-stacked {
+			flex-direction: column;
+
+			.wp-block-button {
+				width: 100% !important;
+				margin-left: 0px !important;
+				margin-right: 0px !important;
+
+				&.wp-block-coblocks-column:last-child {
+					margin-bottom: 0;
+				}
+			}
+
+			// Assign row gutters as margin on the frontend.
+			&.has-no-gutter {
+				.wp-block-button {
+					&:not(:last-child) {
+						margin-bottom: 0;
+					}
+				}
+			}
+
+			// Assign row gutters as margin on the frontend.
+			&.has-small-gutter {
+				.wp-block-button {
+					&:not(:last-child) {
+						margin-bottom: $gutter--small * 2;
+					}
+				}
+			}
+
+			&.has-medium-gutter {
+				.wp-block-button {
+					&:not(:last-child) {
+						margin-bottom: $gutter--medium * 2;
+					}
+				}
+			}
+			&.has-large-gutter {
+				.wp-block-button {
+					&:not(:last-child) {
+						margin-bottom: $gutter--large * 2;
+					}
+				}
+			}
+			&.has-huge-gutter {
+				.wp-block-button {
+					&:not(:last-child) {
+						margin-bottom: $gutter--huge * 2;
+					}
+				}
+			}
 		}
 	}
 
