--- a/src/blocks/buttons/styles/editor.scss
+++ b/src/blocks/buttons/styles/editor.scss
@@ -78,25 +78,25 @@
 			&.has-small-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
 				@media (max-width: #{ ($break-small) }) {
 					&:not(:last-child) {
-						margin-bottom: $gutter--small * 2;
+						margin-bottom: ( $gutter--small / 2 );
 					}
 				}
 
 				@include break-small() {
 					&:nth-child(odd) {
-						margin-right: $gutter--small - 16px;
+						margin-right: ( $gutter--small / 2 ) - 16px;
 					}
 
 					&:nth-child(even) {
-						margin-left: $gutter--small - 16px;
+						margin-left: ( $gutter--small / 2 ) - 16px;
 					}
 
 					&:not(:first-child) {
-						margin-left: $gutter--small - 16px;
+						margin-left: ( $gutter--small / 2 ) - 16px;
 					}
 
 					&:not(:last-child) {
-						margin-right: $gutter--small - 16px;
+						margin-right: ( $gutter--small / 2 ) - 16px;
 					}
 				}
 			}
@@ -104,25 +104,25 @@
 			&.has-medium-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
 				@media (max-width: #{ ($break-small) }) {
 					&:not(:last-child) {
-						margin-bottom: $gutter--medium * 2;
+						margin-bottom: ( $gutter--medium / 2 );
 					}
 				}
 
 				@include break-small() {
 					&:nth-child(odd) {
-						margin-right: $gutter--medium - 16px;
+						margin-right: ( $gutter--medium / 2 ) - 16px;
 					}
 
 					&:nth-child(even) {
-						margin-left: $gutter--medium - 16px;
+						margin-left: ( $gutter--medium / 2 ) - 16px;
 					}
 
 					&:not(:first-child) {
-						margin-left: $gutter--medium - 16px;
+						margin-left: ( $gutter--medium / 2 ) - 16px;
 					}
 
 					&:not(:last-child) {
-						margin-right: $gutter--medium - 16px;
+						margin-right: ( $gutter--medium / 2 ) - 16px;
 					}
 				}
 			}
@@ -130,25 +130,25 @@
 			&.has-large-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
 				@media (max-width: #{ ($break-small) }) {
 					&:not(:last-child) {
-						margin-bottom: $gutter--large * 2;
+						margin-bottom: ( $gutter--large / 2 );
 					}
 				}
 
 				@include break-small() {
 					&:nth-child(odd) {
-						margin-right: $gutter--large - 16px;
+						margin-right: ( $gutter--large / 2 ) - 16px;
 					}
 
 					&:nth-child(even) {
-						margin-left: $gutter--large - 16px;
+						margin-left: ( $gutter--large / 2 ) - 16px;
 					}
 
 					&:not(:first-child) {
-						margin-left: $gutter--large - 16px;
+						margin-left: ( $gutter--large / 2 ) - 16px;
 					}
 
 					&:not(:last-child) {
-						margin-right: $gutter--large - 16px;
+						margin-right: ( $gutter--large / 2 ) - 16px;
 					}
 				}
 			}
@@ -156,25 +156,25 @@
 			&.has-huge-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
 				@media (max-width: #{ ($break-small) }) {
 					&:not(:last-child) {
-						margin-bottom: $gutter--huge * 2;
+						margin-bottom: ( $gutter--huge / 2 );
 					}
 				}
 
 				@include break-small() {
 					&:nth-child(odd) {
-						margin-right: $gutter--huge - 16px;
+						margin-right: ( $gutter--huge / 2 ) - 16px;
 					}
 
 					&:nth-child(even) {
-						margin-left: $gutter--huge - 16px;
+						margin-left: ( $gutter--huge / 2 ) - 16px;
 					}
 
 					&:not(:first-child) {
-						margin-left: $gutter--huge - 16px;
+						margin-left: ( $gutter--huge / 2 ) - 16px;
 					}
 
 					&:not(:last-child) {
-						margin-right: $gutter--huge - 16px;
+						margin-right: ( $gutter--huge / 2 ) - 16px;
 					}
 				}
 			}
@@ -196,25 +196,25 @@
 
 				&.has-small-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
 					&:not(:last-child) {
-						margin-bottom: $gutter--small * 2;
+						margin-bottom: $gutter--small;
 					}
 				}
 
 				&.has-medium-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
 					&:not(:last-child) {
-						margin-bottom: $gutter--medium * 2;
+						margin-bottom: $gutter--medium;
 					}
 				}
 
 				&.has-large-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
 					&:not(:last-child) {
-						margin-bottom: $gutter--large * 2;
+						margin-bottom: $gutter--large;
 					}
 				}
 
 				&.has-huge-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/button"] {
 					&:not(:last-child) {
-						margin-bottom: $gutter--huge * 2;
+						margin-bottom: $gutter--huge;
 					}
 				}
 			}
