Hide the position display fields in the new FocalPointPicker

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -33,3 +33,10 @@
 		}
 	}
 }
+
+// Hide the position display fields.
+.components-focal-point-picker--coblocks {
+	.components-focal-point-picker_position-display-container {
+		display: none;
+	}
+}
