--- a/src/sidebars/block-manager/styles/editor.scss
+++ b/src/sidebars/block-manager/styles/editor.scss
@@ -38,7 +38,7 @@
 		margin-top: 2.1em;
 
 		&:first-of-type {
-			margin-top: 0;
+			margin-top: 1px;
 		}
 
 		&:last-of-type {
@@ -98,7 +98,7 @@
 		padding: 8px;
 		position: sticky;
 		text-align: center;
-		top: 112px;
+		top: 118px;
 		z-index: 11;
 	}
 
