--- a/src/blocks/layout/styles/editor.scss
+++ b/src/blocks/layout/styles/editor.scss
@@ -45,79 +45,21 @@
 			margin-bottom: -1px;
 		}
 	}
+
+	.components-tab-panel__tab-content {
+		padding: 16px;
+	}
 }
 
-//.components-modal--coblocks-layouts {
-
-// 	&.coblocks-modal-component {
-// 		max-width: 1000px;
-// 		width: 100%;
-// 		animation: none;
-// 		animation-fill-mode: none;
-
-// 		.ba__template-type--sections {
-// 			display: none;
-// 		}
-
-// 		.components-tab-panel__tabs {
-// 			position: sticky;
-// 			top: 56px;
-// 			z-index: 999999999999;
-// 			background: #f3f4f5;
-// 			padding: 0;
-// 			border-bottom: 1px solid #e2e4e7;
-
-// 			button {
-// 				padding: 14px 20px;
-// 				height: 100%;
-// 				border: 0;
-// 				outline: none;
-// 				margin: 0;
-// 				box-shadow: none !important;
-// 				background: #f3f4f5;
-// 				font-size: 13px;
-// 				font-weight: 400;
-// 				color: #191e23;
-// 				margin-bottom: -1px;
-// 				border-top: 3px solid #f3f4f5;
-
-// 				&:focus,
-// 				&:active {
-// 					outline: none;
-// 					// color: #191e23;
-// 				}
-
-// 				&:hover {
-// 					// color: #007cba;
-// 				}
-
-// 				// &:focus {
-// 				// 	box-shadow: inset 0 0 0 1px #01A0D2 !important;
-// 				// }
-
-// 				&.active-tab {
-// 					font-weight: 600;
-// 					border-bottom: 3px solid #00a0d2;
-// 				}
-
-// 				&:not(.active-tab) {
-// 					cursor: pointer;
-// 				}
-// 			}
-// 		}
-
-// 		.components-tab-panel__tab-content {
-// 			padding: 20px;
-// 		}
-
-// 		.coblocks-lists {
-// 			margin: -10px;
-// 			box-sizing: border-box;
-// 			display: flex;
-// 			flex-wrap: wrap;
-// 			align-items: flex-start;
-// 			clear: both;
-
+.coblocks-layouts__list {
+	align-items: flex-start;
+	box-sizing: border-box;
+	clear: both;
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0;
+	padding: 0;
+}
 // 			li {
 // 				position: relative;
 // 				width: calc(33.333% - 20px);
@@ -232,7 +174,6 @@
 // 			padding-bottom: 50px;
 // 		}
 // 	}
-// }
 
 //Modal search and category filters.
 .coblocks__modal-controls {
