Improve how blocks are added to columns within the Row block #300

--- a/src/blocks/row/styles/editor.scss
+++ b/src/blocks/row/styles/editor.scss
@@ -587,28 +587,7 @@ body {
 					> .editor-default-block-appender{
 						> .editor-inserter{
 							position: relative;
-    						display: block;
-							.components-button {
-								opacity: 1;
-								display: block;
-								position: relative;
-								background: #f7f7f7;
-								border: 1px dashed #ccc;
-								border-radius: 3px;
-								box-shadow: none !important;
-								font-size: 14px;
-								height: 40px !important;
-								justify-content: center;
-								line-height: 31px;
-								margin-left: 8px;
-								padding: 8px 15px;
-								text-align: center;
-								width: 100%;
-
-								svg {
-									display: inline-block;
-								}
-							}
+    						display: none !important;
 						}
 					}
 				}
@@ -625,112 +604,36 @@ body {
 	}
 }
 
-//add new button when row is selected
-div[data-type="coblocks/row"].is-selected{
-	> .editor-block-list__block-edit{
-		> div{
-			> .wp-block-coblocks-row{
-				> .wp-block-coblocks-row__inner{
-					.wp-block-coblocks-column {
-						// &:not(.wp-block-coblocks-column-placeholder){
-							> .wp-block-coblocks-column__inner{
-								> .editor-inner-blocks{
-									> .editor-block-list__layout{
-										> div:nth-last-child(2){
-											padding-bottom: 40px;
-											> .editor-block-list__insertion-point{
-												top: auto;
-												bottom: 0px;
-												> .editor-block-list__insertion-point-inserter{
-													opacity: 1;
-													position: relative;
-							    					display: block;
-													.editor-inserter{
-														position: relative;
-							    						display: block;
-														.components-button {
-															opacity: 1;
-															display: block;
-															position: relative;
-															background: #f7f7f7;
-															border: 1px dashed #ccc;
-															border-radius: 3px;
-															box-shadow: none !important;
-															font-size: 14px;
-															height: 40px !important;
-															justify-content: center;
-															line-height: 31px;
-															padding: 8px 15px;
-															text-align: center;
-															width: 100%;
-															color: #555d66;
+// when column is selected
+div[data-type="coblocks/column"]{
+	.wp-block-coblocks-column {
+		> .wp-block-coblocks-column__inner{
+			> .editor-inserter{
+				position: relative;
+				display: block;
+				.components-button {
+					opacity: 1;
+					display: block;
+					position: relative;
+					background: #f7f7f7;
+					border: 1px dashed #ccc;
+					border-radius: 3px;
+					box-shadow: none !important;
+					font-size: 14px;
+					height: 40px !important;
+					justify-content: center;
+					line-height: 31px;
+					padding: 8px 15px;
+					text-align: center;
+					width: 100%;
+					color: #555d66;
+					margin-top: 16px;
 
-															svg {
-																display: inline-block;
-															}
-														}
-													}
-												}
-											}
-										}
-									}
-								}
-							}
-						// }
+					svg {
+						display: inline-block;
 					}
 				}
 			}
 		}
-	}
-}
-
-// when column is selected
-div[data-type="coblocks/column"]{
-	.wp-block-coblocks-column {
-		// &:not(.wp-block-coblocks-column-placeholder){
-			> .wp-block-coblocks-column__inner{
-				> .editor-inner-blocks{
-					> .editor-block-list__layout{
-						> div:nth-last-child(2){
-							padding-bottom: 40px;
-							> .editor-block-list__insertion-point{
-								top: auto;
-								bottom: 0px;
-								> .editor-block-list__insertion-point-inserter{
-									opacity: 1;
-									position: relative;
-			    					display: block;
-									.editor-inserter{
-										position: relative;
-			    						display: block;
-										.components-button {
-											opacity: 1;
-											display: block;
-											position: relative;
-											background: #f7f7f7;
-											border: 1px dashed #ccc;
-											border-radius: 3px;
-											box-shadow: none !important;
-											font-size: 14px;
-											height: 40px !important;
-											justify-content: center;
-											line-height: 31px;
-											padding: 8px 15px;
-											text-align: center;
-											width: 100%;
-											color: #555d66;
-
-											svg {
-												display: inline-block;
-											}
-										}
-									}
-								}
-							}
-						}
-					}
-				}
-			}
-		// }
 	}
 }
